--- a/examples/templates/css/style.css
+++ b/examples/templates/css/style.css
@@ -24,6 +24,12 @@ form {  bottom: 3vh; right: 20vw; background-color: transparent; border: none; b
 .file { display:none; }
 .upload-btn-wrapper input[type=file] { font-size: 1.1vw; position: absolute; left: 0; top: 0; width: 100%; height: 100%; cursor: pointer; z-index: 2; opacity: 0; }
 
+/* ------------- GIF ----------------------*/
+.gif-grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(210px, 1fr)); gap: 20px; padding: 1px; overflow-y: auto; max-height: 50vh; width: 100%; }
+.gif-grid img { box-sizing: border-box; width: calc(100% - 16px); height: auto; display: block; padding: 8px; background: #fff; border: 1px solid #ddd; box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2); transition: transform 0.2s ease, box-shadow 0.2s ease; margin: 4px; }
+.gif-grid img:hover { transform: scale(1.05); box-shadow: 8px 8px 15px rgba(0, 0, 0, 0.3); margin: 0px; }
+.gif-grid img.active { outline: 2px solid skyblue; }
+
 /* ------------- Process----------------------*/
 #processingMessage {
     position: absolute;
