--- a/examples/templates/upload.html
+++ b/examples/templates/upload.html
@@ -152,6 +152,7 @@
                 joints.push([target.attr("cx") / width_rate, target.attr("cy") / height_rate])
             })
             $("circle").remove()
+            $("text").remove()
         }
 
     </script>
