--- a/examples/templates/exhibit.html
+++ b/examples/templates/exhibit.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="/get_image/web_contents/AT_Logo.ico" type="image/x-icon">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <title>Animated Tale</title>
     <style>
         body {
-            background-image: url('get_image/web_contents/background.png');
+            background-image: url('get_image/web_contents/background/background_0.png');
             background-size: cover;
             background-repeat: no-repeat;
             background-position: center center;
@@ -34,9 +35,16 @@
     </style>
 </head>
 <body>
+    <img src="/get_image/templates/css/home.png" style="width: 50px; position: absolute; top: 100px; left: 100px;" onclick="home()">
     <!-- The gifs will be displayed here -->
+    <div id="gifs"> </div>
 
 <script>
+    file_list = []
+    count = 1
+    function home() {
+        window.location.href = 'http://localhost:8887'
+    }
     // Fetch only the latest gif and add it to the page
     async function fetchLatestGif() {
         try {
@@ -49,13 +57,40 @@
         }
     }
 
+    function init() {
+        fetchGifs()
+        background()
+    }
+
+    function background() {
+        $.ajax({
+            type:"GET",
+            url:"/background_count",
+            success:function(result){
+                console.log(result)
+                file_list = result
+            }
+        })
+    }
+
+    var body = document.body;
+
+    body.addEventListener("click", function() {
+        count += 1
+        if(count == file_list.length) count = 0
+        newImageUrl = `get_image/web_contents/background/${file_list[count]}`
+        console.log(newImageUrl)
+        $('body').css('background-image', 'url(' + newImageUrl + ')');
+    });
+
     // Fetch the list of gifs from the server
     async function fetchGifs() {
         try {
             const response = await fetch('/get_gif_list');
             const data = await response.json();
             // Clear existing gifs
-            document.body.innerHTML = '';
+            // document.body.innerHTML = '';
+            document.getElementById("gifs").innerHTML = ''
             displayGifs(data.gifs);
         } catch (error) {
             console.error('Error fetching gifs:', error);
@@ -65,7 +100,8 @@
     // Display the gifs on the page
     function displayGifs(gifList) {
         const maxGifs = 10;
-        const container = document.body;
+        // const container = document.body;
+        const container = document.getElementById("gifs")
         for (let i = 0; i < Math.min(gifList.length, maxGifs); i++) {
             const gifElement = document.createElement('div');
             gifElement.classList.add('gif-container');
@@ -97,7 +133,7 @@
             // Bounce on reaching the edge
             if (newX <= 0 || newX >= maxX) {
                 directionX = -directionX;
-                
+
                 // Flip the gif horizontally using CSS transform
                 if (directionX === 1) {
                     gifElement.firstChild.style.transform = "scaleX(1)";  // Original orientation
@@ -111,7 +147,7 @@
     }
 
     // Call the fetchGifs function when the page loads
-    window.onload = fetchGifs;
+    window.onload = init;
 
 </script>
 
