little debug, added drawings

--- a/examples/templates/exhibit.html
+++ b/examples/templates/exhibit.html
@@ -43,7 +43,7 @@
     file_list = []
     count = 1
     function home() {
-        window.location.href = 'http://172.30.1.84:8888'
+        window.location.href = 'http://localhost:8888'
     }
     // Fetch only the latest gif and add it to the page
     async function fetchLatestGif() {
